# integritee-node

./: Cargo.toml  Dockerfile
.github/workflows/: build-docker-dev.yml  ci.yml
docker/: Dockerfile
node/src/: chain_spec.rs  service.rs
pallets/credit-score/: Cargo.toml
pallets/credit-score/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/weights/: mod.rs  pallet_vc_management.rs
scripts/: build-docker.sh
