[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'runtime',
    'pallets/credit-score'
]

#[patch."https://github.com/integritee-network/pallets.git"]
#pallet-claims = { path = '../pallets/claims' }
#pallet-teerex = { path = '../pallets/teerex' }
#pallet-teeracle = { path = '../pallets/teeracle' }
